# camoufox-browser

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: publish-npm.yml  release-native.yml
cli/: Cargo.toml
cli/src/: commands.rs  connection.rs  flags.rs  install.rs  main.rs  output.rs  validation.rs
scripts/: clean-dist.js  copy-native.js  postinstall.js
skills/camoufox-browser/: SKILL.md
src/: browser.ts  cli.ts  daemon-client.test.ts  daemon-client.ts  daemon.ts  ipc.ts  protocol.ts  server.test.ts  server.ts  snapshot.ts  types.ts
